--- a/lab-04.qmd
+++ b/lab-04.qmd
@@ -1,10 +1,7 @@
 ---
 title: "Lab 04: Scaffolding reproducible research"
 author: "Logan Jacobs"
-format:
-  pdf:
-    toc: true
-    toc-depth: 1
+format: html
 editor: source
 ---
 
